--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand">
-     {% comment %} href="{​​​​% url 'home' %}​​​​" {% endcomment %}
         <img src="{% static "img/ferrarka.jpg" %}" alt="My image">  
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,10 +15,10 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/register">Link</a>
+                <a class="nav-link" href="/register">Rejestracja</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="/login">Logowanie</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
