--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block data %}
+{% block content %}
 <div class="container">
-  <h1>Register</h1>
+  <h1>Rejestracja</h1>
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign up</button>
+    <button type="submit">Zarejestruj</button>
   </form>
 </div> 
 {% endblock %}
