--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,12 +14,20 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+            
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Wyloguj</a>
+            </li>
+            {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="/register">Rejestracja</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/login">Logowanie</a>
             </li>
+            {% endif %}
+            
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
