--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,12 @@
 {% extends 'base.html' %}
+
+{% block content %}
+    <div class="container">
+    <h1>Logowanie</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Zaloguj</button>
+    </form>
+    </div> 
+{% endblock %}
