--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,8 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Zaloguj</button>
+        <small class="text-muted">
+            Nie masz konta? <a class="ml-2" href="{% url 'register' %}">Zarejestruj się!</a>
     </form>
     </div> 
 {% endblock %}
