--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Wyloguj</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/profile">Mój profil</a>
+            </li>
             {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="/register">Rejestracja</a>
