--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
+<div class="row">  
+<div class="mx-auto my-5 col-sm-3 pxy-5">
+<div class="row justify-content-md-center">
+    <div class="col-sm">
+      <div class="content-section">
       <div class="media">
         <div class="media-body">
         </div>
@@ -17,4 +21,8 @@
           </div>
       </form>
     </div>
+    </div>
+  </div>  
+  </div>
+  </div>
 {% endblock content %}
