--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="my-navbar">
     <a class="navbar-brand">
         <img src="{% static "img/ferrarka.jpg" %}" alt="My image">  
       </a>
