timetables download done, simple map implemented

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -1,4 +1,13 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
-#my-navbar {height: 100px;}
-.navbar-brand img { height: 80px;}
+#my-navbar {
+  height: 100px;
+}
+.navbar-brand img {
+  height: 80px;
+}
+
+// #mymap {
+//   height: 500px;
+//   width: auto;
+// }
