--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,13 @@
         </div>
       {% endfor %}
     {% endif %}
+    
       {% block content %}
+      
    
       {% endblock %}
-    <div id="app"> {% render_bundle 'index' 'js' %}</div>
+    <!-- <div id="app"> {% render_bundle 'index' 'js' %}</div> -->
+    
     {% if settings.DEBUG and settings.WEBPACK_LIVE_SERVER %}
         <script src="{{ settings.WEBPACK_LIVE_SERVER_CONFIG.ADDRESS }}/vendor.bundle.js"></script>
         <script src="{{ settings.WEBPACK_LIVE_SERVER_CONFIG.ADDRESS }}/app.bundle.js"></script>
