Races download done

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -7,7 +7,8 @@
   height: 80px;
 }
 
-// #mymap {
-//   height: 500px;
-//   width: auto;
+// input {
+//   height: 140px !important;
+//   width: 140px !important;
+//   margin: 0 auto;
 // }
