--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% block head %}
+    
     <meta charset="UTF-8">
     {% if title %}
       <title>{{title}}</title>
@@ -10,6 +12,7 @@
       <title>F1 info</title>
     {% endif %}
     {% render_bundle 'app' 'css' %}
+    {% endblock %}
   </head>
   {% block body %}
   {% include './navbar.html' %}
