--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,24 @@
 
 {% extends 'base.html' %}
 {% load render_bundle from webpack_loader %} {% load staticfiles %}
+{% load crispy_forms_tags %}
+
 
 {% block content %}
+    <body>
     <div class="container">
-    <h1>Logowanie</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Zaloguj</button>
-        <small class="text-muted">
-            Nie masz konta? <a class="ml-2" href="{% url 'register' %}">Zarejestruj się!</a>
-    </form>
+        <h1>Logowanie</h1>    
+        <div class="d-flex justify-content-left">
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button type="submit">Zaloguj</button>
+                    <small class="text-muted">
+                        Nie masz konta? <a class="ml-2" href="{% url 'register' %}">Zarejestruj się!</a>
+                </form>
+                </div>
+            </div>
+        </div>   
     </div> 
-    
+    </body>
 {% endblock %}
