--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container">
   <h1>Rejestracja</h1>
   <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form | crispy }}
     <button type="submit">Zarejestruj</button>
   </form>
 </div> 
