before models change

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,12 +8,12 @@
   <div class="row" id="tables">
     <div class="col-sm mx-5">
      
-          <h1>Ranking</h1>
+          <h1>Kierowcy</h1>
           <table class="table css-serial">
             <thead>
               <tr>
-                <th>Name</th>
-                <th>Username</th>
+                <th>Imię</th>
+                <th>Nazwisko</th>
               </tr>
             </thead>
 
