--- a/templates/register.html
+++ b/templates/register.html
@@ -2,12 +2,17 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+
 <div class="container">
+  <div class="d-flex justify-content-center">
   <h1>Rejestracja</h1>
+  </div>
+  <div class="d-flex justify-content-center">
   <form method="POST">
     {% csrf_token %}
     {{ form | crispy }}
     <button type="submit">Zarejestruj</button>
   </form>
+  </div>
 </div> 
 {% endblock %}
