--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
               <tr>
                 <th>Imię</th>
                 <th>Nazwisko</th>
+                <th>Punkty</th>
               </tr>
             </thead>
 
@@ -23,6 +24,7 @@
               <tr>
                 <td>{{ obj.name }}</td>
                 <td>{{ obj.surname}}</td>
+                <td>{{ obj.points}}</td>
               </tr>
               {% endfor %}
 
