--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,19 +2,20 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="my-navbar">
     <a class="navbar-brand">
-        <img src="{% static "img/ferrarka.jpg" %}" alt="My image">  
-      </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="{% static "img/ferrarka.jpg" %}" alt="My image">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        
+
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-            
+
             {% if user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Wyloguj</a>
@@ -22,6 +23,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/profile">Mój profil</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/types">Typowanie</a>
+            </li>
+                        
             {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="/register">Rejestracja</a>
@@ -30,11 +35,12 @@
                 <a class="nav-link" href="/login">Logowanie</a>
             </li>
             {% endif %}
-            
+
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            {% if user.is_authenticated %}
+                <a class="nav-link" >Jesteś zalogowany jako {{ user }}</a>
+            {% endif %}
         </form>
     </div>
 </nav>
