--- a/templates/race.html
+++ b/templates/race.html
@@ -30,8 +30,33 @@
 {%endblock%}
 {% block content %}
 
+<div>
+    <h1>Wyniki</h1>
+    <table >
+      <thead>
+        <tr>
+            <th>Pozycja</th>
+            <th>Kierowca</th>
+            <th>Punkty</th>
+        </tr>
+      </thead>
+
+      <tbody>
+
+        {% for result in results %}
+        <tr>
+          <td>{{ result.position }}</td>
+          <td>{{ result.driver}}</td>
+          <td>{{ result.points}}</td>
+        </tr>
+        {% endfor %}
+
+      </tbody>
+    </table>
+  </div>
 <div class="d-flex p-2">
     <div class="container">
+        
         <h1>Informacje o GP</h1>
         <table class="table css-serial">
             <thead>
@@ -127,6 +152,8 @@
             </tbody>
         </table>
     </div>
+
+    
 </div>
 
 <div class="container" id="mymap">
