--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/results">Wyniki wyścigów</a>
+            </li>
 
             {% if user.is_authenticated %}
             <li class="nav-item">
