Profile update fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 </div>
 {% endfor %}
 {% endif %}
-<img style="opacity: 0.5; background-image: url('{% static "./img/image.jpg" %}');></img>
+<!-- <img style="opacity: 0.5; background-image: url('{% static "./img/image.jpg" %}');></img> -->
 {% block content %}
 
 
